--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <link>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website">
+<meta property="og:title" content="Bhavana Arora Portfolio">
+<meta property="og:url" content="https://bhavanaarora.github.io/Portfolio/">
+<meta property="og:image" content="https://bhavanaarora.github.io/Portfolio/images/profilepic3.jpeg">
+<meta property='og:image:width' content='612' />
+<meta property='og:image:height' content='612' />
+<meta property="og:description" content="My Portfolio">
   <title>Bhavana Arora</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./scrollEffects.css"></link>
