--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 
         <div class="w-100">
           <div class="row h-100">
-            <div class="col-12 col-xxl-6 mx-auto py-5 py-xxl-0   hidden">
+            <div class="col-12 col-xxl-6 mx-auto py-2 py-md-5 py-xxl-0   hidden">
               <div class="right-about hidden h-100  d-flex flex-column  align-items-center">
                 <div class="profilepic"> <img src="./images/profilepic3.jpeg" alt="profile pic"></div>
 
-                <div id="#about-text" class="about-text show text-white w-50 p-2 mt-3">
+                <div id="#about-text" class="about-text show d-none d-md-block text-white w-50 p-2 mt-3">
                   <p class="lead fs-4 bg px-3 py-2">I have done MCA. Recently I got certificate in a Full-Stack
                     Development.</p>
-                </div>
+                </div>  
 
                 <div class="pt-4 pb-5 ">
                   <a href="https://github.com/bhavanaarora"><i class="fa-brands fa-square-github fa-3x pe-2"></i></a>
@@ -120,7 +120,7 @@
               </div>
             </div>
 
-            <div class="col-12 hidden d-xxl-none box  text-white">
+            <div class="col-12 hidden d-none d-sm-flex d-xxl-none box  text-white">
               <div class="py-2">
                 <h3>Leadership Skill</h3>
               </div>
@@ -511,7 +511,7 @@
       <h1 class="heading">Contact</h1>
       <div class="container bg">
         <div class="row h-100">
-          <div class="col-12 col-md-6 mx-auto py-5 py-lg-0   hidden">
+          <div class="col-12 col-md-6 mx-auto py-2 py-sm-5 py-lg-0   hidden">
             <div>
               <p class="lead mt-3 text-center "><span class="fw-bold fs-3">Email:</span> bhavanaaa.arora@gmail.com
               </p>
