--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                     required></textarea>
                 </div>
                 <div class="submit-btn">
-                  <input type="submit" class="btn-contact" style="margin-top:0px;line-height:normal;">
+                  <input type="submit" value="Submit" class="btn-contact" style="margin-top:0px;line-height:normal;">
                 </div>
 
               </form>
