--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name='Portfolio' content='Bhavana Arora Portfolio'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Bhavana Arora Portfolio">
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Bhavana Arora Portfolio"/>
   <meta property="og:url" content="https://bhavanaarora.github.io/Portfolio/">
-  <meta property="og:image" content="https://bhavanaarora.github.io/Portfolio/images/profilepic3.jpeg">
-  <meta property='og:image:width' content='612' />
-  <meta property='og:image:height' content='612' />
-  <meta property="og:description" content="My Portfolio">
+  <meta property="og:image" content="https://bhavanaarora.github.io/Portfolio/images/profilepic3.jpeg"/>
+  <meta property='og:image:width' content='612'/>
+  <meta property='og:image:height' content='612'/>
+  <meta property="og:description" content="My Portfolio"/>
   <title>Bhavana Arora</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./scrollEffects.css">
-  </link>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./assets/carousel-css/owl.carousel.css">
   <link rel="stylesheet" href="./assets/carousel-css/owl.theme.green.css">
