--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta property="og:title" content="Bhavana Arora Portfolio"/>
   <meta property="og:url" content="https://bhavanaarora.github.io/Portfolio/">
   <meta property="og:image" itemprop="image" content="https://bhavanaarora.github.io/Portfolio/images/portfolioimg.jpg"/>
-  <meta property='og:image:width' content='256'/>
-  <meta property='og:image:height' content='256'/>
+  <!-- <meta property='og:image:width' content='256'/>
+  <meta property='og:image:height' content='256'/> -->
   <meta property="og:description" content="My Portfolio"/>
   <title>Bhavana Arora</title>
   <link rel="stylesheet" href="./style.css">
