--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="profilepic"> <img src="./images/profilepic3.jpeg" alt="profile pic"></div>
 
                 <div id="#about-text" class="about-text show d-none d-md-block text-white w-50 p-2 mt-3">
-                  <p class="lead fs-4 bg px-3 py-2">I have done MCA. Recently I got certificate in a Full-Stack
+                  <p class="lead fs-4 bg px-3 py-2">I have done MCA. Recently I got a certificate in a Full-Stack
                     Development.</p>
                 </div>  
 
@@ -201,7 +201,7 @@
             <div class=" d-flex flex-column justify-content-center align-items-center">
               <p class="lead fs-4 mb-2 mb-md-3">An Individual eager to learn and explore new fields of life and
                 technology, with good
-                listening skills and fast learning capabalities.</p>
+                listening skills and fast learning capabilities.</p>
               <div class="box text-blue my-5 py-3 px-5">
                 <h4>Interest</h4>
                 <p class="lead ">Web Dessignning</p>
@@ -491,7 +491,7 @@
                     class="fw-bold">React, Express,</span> & <span class="">MongoDB</span></p>
                 <div class="text-center"><a href="https://github.com/bhavanaarora/mernapp"
                     class="btn btn-primary button">GitHub</a>
-                  <a href="https://mernapp-production-dfb8.up.railway.app/" class="btn btn-primary button">Live
+                  <a href="https://busy-gold-starfish-shoe.cyclic.app/" class="btn btn-primary button">Live
                     Project</a>
                 </div>
               </div>
